fixed contrast issues

--- a/styles/place.css
+++ b/styles/place.css
@@ -6,9 +6,9 @@
 
 :root {
     --primary-color: #f8f9fa;
-    --background-color: #009c3b;
+    --background-color: #002776;
     --border-table-color: #FFCC29;
-    --text-color: #212529;
+    --text-color: #000000;
     --radius: 8px;
     --shadow: 0 2px 12px rgba(0, 39, 118, 0.10);
     --font-text: "Roboto", sans-serif;
@@ -83,7 +83,7 @@ td.value {
 
 footer {
     background-color: var(--background-color);
-    color: white;
+    color: var(--primary-color);
     text-align: center;
     padding: 1rem;
 }
